tests/negative_tests/semantic_errors/array_negative_size.c
// INVALID - Semantic Error: array size must be positive
int main() {
    int arr[-5];  // ERROR: negative array size
    return 0;
}
